--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-
-      - name: Use cached node_modules
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: nodeModules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            nodeModules-
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
